<resources>
    <string name="app_name">ShareWithMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="password_edit_hint">Password</string>
    <string name="user_edit_hint">Username</string>
    <string name="field_required">This field is required</string>
    <string name="buy_sell_i_wanna_text">I want to...</string>
    <string name="buy_radio_button_text">Buy</string>
    <string name="sell_radio_button_text">Sell</string>
    <string name="description_edit_text">Description</string>
    <string name="default_expiration_text">Default expiration: 14 days</string>
    <string name="create_button_text">Post</string>
    <string name="keywords_text">Keywords</string>
    <string name="description_text">Description</string>
    <string name="title_text">Title</string>
    <string name="value_hint">$ 0.00</string>
    <string name="title_hint">Type the title here...</string>
    <string name="description_hint">Type the description here...</string>
    <string name="keyword_hint">Insert keywords to optimize searches</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draft_button_text">Save as Draft</string>
    <string name="offer_radio_button_text">Offer</string>
    <string name="request_radio_button_text">Request</string>
    <string name="destination_text">Destination</string>
    <string name="destination_hint">Optional destination info</string>
    <string name="departure_text">Departure</string>
    <string name="departure_hint">Optional departure location</string>
    <string name="date_text">Date</string>
    <string name="menu_preferences_text">Preferences</string>
    <string name="menu_help_text">Help and Feedback</string>
    <string name="categories_text">Categories</string>
    <string name="cat_rides_text">Rides</string>
    <string name="cat_buy_sell_text">Buy and Sell</string>
    <string name="cat_lost_found_text">Lost and Found</string>
    <string name="cat_events_text">Events</string>
    <string name="cat_others_text">Others</string>
    <string name="title_help_and_feedback_text">Help and Feedback</string>
    <string name="help_feedback_instructions_text">Please choose below if you want to request help or to provide feedback:</string>
    <string name="help_radio_button_text">Help</string>
    <string name="feedback_radio_button_text">Feedback</string>
    <string name="help_feedback_type_text">Please type the details:</string>
    <string name="send_text">SEND</string>

    <string name="profile_default_phone">phone: +1 (999) 999-9999</string>
    <string name="profile_default_email">e-mail: username@rose-hulman.edu</string>
    <string name="profile_default_name">username: Profile Name</string>
    <string name="profile_update">Update</string>
    <string name="login_email_password_empty">Please fill all the fields to login</string>
    <string name="dialog_update_profile_title">Update your profile</string>
    <string name="edit_post_button_text"><u>Edit</u></string>
    <string name="menu_drafts_text">Drafts</string>

    <string name="lost_radio_button_text">Lost</string>
    <string name="found_radio_button_text">Found</string>
    <string name="lost_and_found_begin_text">I ...</string>
    <string name="lost_and_found_end_text">... something!</string>
    <string name="all_radio_button_filter">All</string>
    <string name="login_error">"Login failed! "</string>
    <string name="menu_dashboard_text">Dashboard</string>
    <string name="lost_and_found_drafts_text">Lost And Found</string>
    <string name="rides_drafts_text">Rides</string>
    <string name="buy_and_sell_draft_text">Buy And Sell</string>
    <string name="inactivate_post_text"><u>Inactivate Post</u></string>
    <string name="inactivate_alert_message">Are you sure you want to inactivate this post?\nThis post will no longer be visible.</string>
</resources>
