<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_preferences"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_preferences_text" />
        <item
            android:id="@+id/menu_help_and_feedback"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_help_text" />
        <item
            android:id="@+id/menu_drafts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_drafts_text" />
    </group>

    <item android:title="@string/categories_text">
        <menu>
            <item
                android:id="@+id/categories_rides"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cat_rides_text" />
            <item
                android:id="@+id/categories_buy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cat_buy_sell_text" />
            <item
                android:id="@+id/categories_lost_found"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cat_lost_found_text" />
            <item
                android:id="@+id/categories_events"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cat_events_text" />
            <item
                android:id="@+id/categories_others"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cat_others_text" />
        </menu>
    </item>

</menu>
