<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_sell_i_wanna_text"
        android:id="@+id/i_wanna_text_view" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_radio_button_text"
            android:id="@+id/buy_radio_button"
            android:layout_gravity="right" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_radio_button_text"
            android:id="@+id/sell_radio_button"
            android:layout_gravity="right" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:hint="$ 0.00"
        android:id="@+id/value_edit_text"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:id="@+id/title_text_view" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type the title here..."
        android:id="@+id/title_edit_text" />//

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:id="@+id/description_text_view" />//

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="Type the description here..."
        android:id="@+id/description_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_expiration_text"
        android:id="@+id/expiration_date_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keywords_text"
        android:id="@+id/keyword_text_view" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keyword_edit_text"
        android:hint="Insert keywords to optimize searches"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_text"
        android:id="@+id/create_button"
        android:layout_gravity="right" />


</LinearLayout>